--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -9,7 +9,7 @@
                 {% else %}
                     Logged as
                 {% endif %}
-                {{ request.user.first_name }}</a>
+                {{ request.user.first_name }}, {{ user.position }}</a>
         {% endif %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -24,6 +24,9 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout user' %}">Logout</a></li>
                     <li class="nav-item"><a class="nav-link"
                                             href="{% url 'details user' pk=request.user.pk %}">Profile</a></li>
+                    {% if user.position == 'admin' %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'manage users' %}">Users</a></li>
+                    {% endif %}
                 {% endif %}
             </ul>
         </div>
