--- a/templates/spare_parts/part-create.html
+++ b/templates/spare_parts/part-create.html
@@ -8,9 +8,12 @@
         <div class="text-end col-4">
             <form method="post" action="{% url 'part create' %}" enctype="multipart/form-data">
                 {% for field in form %}
-                    <p class="col-7">
-                    <h5>{{ field.name }}: {{ field }}</h5>
-                    </p>
+                    <div class="col-7">
+                        <h5>{{ field.name }}: {{ field }}</h5>
+                    <div class="invalid-feedback">
+                        <h5>{{ form.errors.part_number }}</h5>
+                    </div>
+                    </div>
                 {% endfor %}
                 <button type="submit" class="btn btn-success">Save</button>
                 {% csrf_token %}
@@ -22,7 +25,7 @@
 
 {% endblock page_content %}
 
-
+{##}
 {#<!doctype html>#}
 {#<html lang="en">#}
 {#<head>#}
