--- a/templates/spare_parts/stock_items_list.html
+++ b/templates/spare_parts/stock_items_list.html
@@ -26,7 +26,7 @@
                             <td>{{ part.description }}</td>
                             <td>{{ part.quantity }}</td>
                             <td>{{ part.min_stock_qty }}</td>
-                            {% if request.user.position == 'maintenance' %}
+                            {% if request.user.position in 'maintenance, admin' %}
                                 <td><a href="{% url 'edit stock item' pk=part.pk %}">Edit</a></td>
                             {% endif %}
                         </tr>
