--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -22,7 +22,7 @@
                 <div class="card-footer">
                     <a class="btn btn-primary" href="{% url 'issues' %}">View Issues</a>
                     {% if request.user.is_authenticated %}
-                        <a class="btn btn-secondary position-absolute " href="{% url 'issue create' %}"
+                        <a class="btn btn-secondary" href="{% url 'issue create' %}"
                            style="background: darkred">
                             Log New Issue</a>
                     {% endif %}
